updated the side filter
the side filters on properties-all.html and rent.html is now fixed on the side, and the properties dont get smaller than 350px

--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -20,6 +20,7 @@ html, body {
     color: #fafafa;
     background-color: #203036;
     padding: 10px;
+    z-index: 99999;
   }
   
   main.page-body {
