--- a/css-files/properties-all.css
+++ b/css-files/properties-all.css
@@ -6,7 +6,7 @@
   .rent-properties-content {
     margin-top: 100px;
     margin-bottom: 100px;
-    margin-left: 10%;
+    margin-left: 400px;
     margin-right: 1%;
     width: 100%;
   }
@@ -138,66 +138,6 @@
 
   .property-text span {
       font-weight: bold;
-  }
-  
-  .top-filter-rent {
-      background-color: #556165;
-      display: flex;
-      flex-direction: column;
-      padding-left: 50px;
-      padding-bottom: 75px;
-      border-radius: 0px 0px 5px 0px;
-      color: white;
-      width: 250px;
-      height: 100%;
-      min-width: 250px;
-      overflow: scroll;
-      p {
-        font-size: 19px;
-        width: 240px;
-        font-style: italic;
-        opacity: 75%;
-        margin-bottom: 0px;
-      }
-      h2 {
-        font-size: 27px
-      }
-  }
-  
-  .gobackbutton {
-      margin-top: 25px;
-      margin-bottom: 25px;
-  }
-  
-  .gobackbutton a {
-      color: white;
-      font-size: 20px;
-      list-style: none;
-      padding: 5px;
-      padding-left: 15px;
-      padding-right: 15px;
-      background-color: #203036;
-      border-radius: 9999px;
-      opacity: 75%;
-      &:hover {
-        transform: scale(2.5);
-        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
-        opacity: 100%;
-      }
-  }
-  
-  .filters {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-bottom: 30px;
-      font-size: 22px;
-  }
-  
-  .filtercontainer input {
-      cursor: pointer;
-      height: 25px;
-      width: 25px;
   }
   
   @media (max-width: 1492px) {
