--- a/css-files/side-filters.css
+++ b/css-files/side-filters.css
@@ -12,12 +12,11 @@
     border-radius: 0px 0px 5px 0px;
     flex-wrap: nowrap;
     color: white;
-    width: 240px;
+    width: 190px;
     height: 100%;
     overflow: hidden;
     p {
       font-size: 19px;
-      width: 240px;
       font-style: italic;
       opacity: 75%;
       margin-bottom: 0px;
@@ -69,4 +68,20 @@
       box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
       opacity: 100%;
     }
+  }
+
+  @media (max-width: 1409px) {
+    .top-filter-rent {
+      padding-left: 25px;
+      padding-bottom: 45px;
+      width: 200px;
+      p {
+        font-size: 17px;
+        width: 200px;
+      }
+      h2 {
+        font-size: 25px
+      }
+    }
+
   }
