--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -90,15 +90,29 @@ html, body {
     float: left;
   }
 
-  #footer-info-box h1 {
+  #footer-info-box h1, #footer-about-box h1 {
     font-size: 25px;
     text-align: center;
   }
 
-  #footer-info-box p {
+  #footer-about-box h1, #footer-about-box a {
+    width: 300px;
+  }
+
+  #footer-info-box p, #footer-about-box a {
     font-size: 17px;
     text-align: center;
   }
+
+  #footer-call-icon-box, #footer-mall-icon-box {
+    margin-top: 350px;
+    display: flex;
+  }
+
+  #footer-about-box {
+    margin-left: -400px;
+  }
+
 
 
   /* END FOOTER*/
