--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -134,7 +134,7 @@ html, body {
     margin-left: 90px;
   }
 
-  #footer-contact-box, #footer-work-box, #footer-services-box {
+  #footer-work-box, #footer-services-box {
     margin-left: 100px;
   }
 
