--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -112,7 +112,7 @@ html, body {
   }
 
   #footer-about-box a {
-    margin-left: 100px;
+    margin-left: 120px;
     text-align: center;
   }
 
@@ -122,7 +122,15 @@ html, body {
   }
 
   #footer-longer-text {
+    margin-left: -70px;
+  }
+
+  #footer-middle-text {
     margin-left: -40px;
+  }
+
+  #footer-last-text {
+    margin-left: 20px;
   }
 
   #footer-social-media-box {
