--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -209,7 +209,7 @@
   margin-top: 150px;
 }
 
-.properties-geneva-house-one {
+.properties-geneva-house-one, .property-zurich {
   margin-top: 20px;
   margin-left: 30px;
 }
