--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -214,7 +214,7 @@
   margin-left: 30px;
 }
 
-.properties-geneva-house-two {
+.properties-geneva-house-two, .properties-zurich-house {
   margin-top: 20px;
   margin-left: 40px;
 }
