--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -209,20 +209,20 @@
   margin-top: 150px;
 }
 
-.properties-geneva-house-one, .property-zurich, .properties-bern-house {
+.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property {
   margin-top: 20px;
   margin-left: 30px;
 }
 
-.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one {
+.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties {
   margin-top: 20px;
   margin-left: 40px;
 }
 
-.zurich-proerpties, .property-bern {
+.zurich-proerpties, .property-bern, .propety-lucerne {
   margin-left: 30px;
 }
 
-.properties-zurich, .properties-bern {
+.properties-zurich, .properties-bern, .properties-lucerne {
   margin-left: 40px;
 }
