--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -225,8 +225,8 @@ body {
 }
 
 .eco-friendly-left {
-  margin-left: 150px;
-  margin-right: 15px;
+  margin-left: 10%;
+  margin-right: 5%;
   font-size: 30px;
   display: flex;
   flex-direction: column;
@@ -259,14 +259,17 @@ body {
 }
 
 .eco-friendly-image {
-  margin-right: 150px;
+  margin-right: 10%;
   margin-top: 25px;
+  max-width: 485px;
+  min-width: 300px;
+  width: 100%;
 }
 
 .eco-friendly-image img {
   border-radius: 5px;
   height: 460px;
-  width: 590px;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -282,9 +285,8 @@ body {
 }
 
 .selling-right {
-  margin-right: 150px;
-  margin-left: 100px;
-  font-size: 30px;
+  margin-right: 5%;
+  margin-left: 5%;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -311,14 +313,17 @@ body {
 }
 
 .selling-image {
-  margin-left: 150px;
+  margin-left: 10%;
   margin-top: 25px;
+  max-width: 485px;
+  min-width: 350px;
+  width: 100%;
 }
 
 .selling-image img {
   border-radius: 5px;
   height: 460px;
-  width: 590px;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -334,9 +339,8 @@ body {
 }
 
 .buying-left {
-  margin-left: 150px;
+  margin-left: 10%;
   margin-right: 15px;
-  font-size: 30px;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -348,20 +352,19 @@ body {
 }
 
 .buying-image {
-  margin-right: 150px;
+  margin-right: 10%;
   margin-top: 25px;
+  max-width: 485px;
+  min-width: 300px;
+  width: 100%;
 }
 
 .buying-image img {
   border-radius: 5px;
   height: 460px;
-  width: 590px;
+  width: 100%;
   object-fit: cover;
 }
-
-
-
-
 
 .newsletter {
   margin-top: 200px;
@@ -440,12 +443,222 @@ body {
 
 .logo-background {
   position: relative;
-  background-image: url(/media/example_2.png);
-  background-repeat: repeat-x;
-  background-size: contain;
-  background-position: center;
+  background-image: url(/photos/squiggly2-dark.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 380px;
   width: 150%;
-  left: -50px;
-  filter: blur(7px);
+}
+
+/* Make it responsive to smaller size */
+
+@media (max-width: 750px) {
+
+  .eco-friendly-image {
+    display: none;
+  }
+  
+  .selling-image {
+   display: none;
+  }
+
+  .buying-image {
+   display: none;
+  }
+
+  .content2-eco {
+    margin-bottom: 50px;
+    height: 400px;
+  }
+
+  .content2-selling {
+    margin-bottom: 50px;
+    height: 400px;
+  }
+
+  .content2-buying {
+    margin-bottom: 0px;
+    height: 400px;
+  }
+
+  .newsletter {
+    margin-top: 100px;
+    height: 300px;
+  }
+
+  .newsletter-text {
+    line-height: 10px;
+    margin-top: 20px;
+  }
+  
+  .newsletter-text h3 {
+    font-size: 37.5px;
+    font-weight: bolder;
+  }
+  
+  .newsletter-text p {
+    font-size: 19px;
+  }
+  
+  .nexsletter-emailbox {
+    gap: 10px;
+    margin-top: 50px;
+  }
+  
+  .enter-email {
+    width: 400px;
+    height: 35px;
+  }
+  
+  .enter-email p {
+    font-size: 22px;
+    padding: 5px;
+    margin-left: 10px;
+  }
+  
+  .submit-button {
+    height: 40px;
+    font-size: 18px;
+  }
+  
+  .submit-button p {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+/* Make it responsive to phones */
+
+@media (max-width: 675px) {
+
+  .content2-eco {
+    margin-bottom: 50px;
+    height: 350px;
+  }
+
+  .content2-selling {
+    margin-bottom: 50px;
+    height: 350px;
+  }
+
+  .content2-buying {
+    margin-bottom: 0px;
+    height: 350px;
+  }
+
+  .eco-friendly-left {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  
+  .eco-friendly-textbox {
+    color: #203036;
+    font-size: 20px;
+  }
+   
+  .learn-more-button a p {
+    padding: 10px;
+    border-radius: 999px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 16px;
+  }
+
+  .buying-left {
+    margin-left: 5%;
+  }
+  
+  .buying-textbox {
+    font-size: 20px;
+    color: #203036;
+  }
+
+  .selling-textbox {
+  color: white;
+  font-size: 20px;
+  }
+
+  #selling-content-button a p {
+  padding: 10px;
+  border-radius: 999px;
+  color: #203036;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 16px;
+  }
+
+}
+
+@media (max-width: 580px) {
+  
+  .content2-selling {
+    margin-bottom: 50px;
+    height: 400px;
+  }
+
+  .content2-buying {
+    margin-bottom: 0px;
+    height: 400px;
+  }
+
+  .newsletter {
+    margin-top: 100px;
+    height: 275px;
+  }
+
+  .newsletter-text {
+    margin-top: 5px;
+    line-height: normal;
+  }
+  
+  .newsletter-text h3 {
+    font-size: 27px;
+    margin-right: 3%;
+    margin-left: 3%;
+    margin-bottom: 0px;
+  }
+  
+  .newsletter-text p {
+    margin-top: 5px;
+    font-size: 16px;
+    line-break: auto;
+    margin-right: 10%;
+    margin-left: 10%;
+  }
+  
+  .nexsletter-emailbox {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 5%;
+    margin-right: 5%;
+    justify-content: center;
+  }
+  
+  .enter-email {
+    width: 200px;
+    height: 35px;
+  }
+  
+  .enter-email p {
+    font-size: 15px;
+    padding: 5px;
+  }
+  
+  .submit-button {
+    height: 30px;
+  }
+
+}
+
+@media (max-width: 375px) {
+  .eco-friendly-left {
+    gap: 0px;
+  }
+  .selling-right {
+    gap: 0px;
+  }
+  .buying-left {
+    gap: 0px;
+  }
 }
