--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -2,6 +2,9 @@ body {
   overflow-x: hidden;
 }
 
+
+/* Top Picture & filter*/
+
 .top-pic {
   margin-top: 0px;
   padding: 0px;
@@ -102,6 +105,9 @@ body {
     background-color: green;
   }
 }
+
+
+/* Newest Properties*/
 
 .content1-properties {
   margin-top: 100px;
@@ -225,6 +231,7 @@ body {
 
 
 
+/* Learn More content */
 
 .content2-eco {
   background-color: #D9D9D9;
@@ -379,6 +386,9 @@ body {
   object-fit: cover;
 }
 
+
+/* Newsletter */
+
 .newsletter {
   margin-top: 200px;
   background-color: #203036;
@@ -462,6 +472,8 @@ body {
   height: 380px;
   width: 150%;
 }
+
+
 
 /* Make it responsive to smaller size screen*/
 
