--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -142,7 +142,7 @@
   margin-left: 40px;
 }
 
-.properties-container-florence-last {
+.properties-container-florence-last, .lucerne-last-house {
   margin-bottom: 30px;
 }
 
