--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -223,6 +223,6 @@
   margin-left: 30px;
 }
 
-.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property {
+.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow {
   margin-left: 40px;
 }
