--- a/css-files/about.css
+++ b/css-files/about.css
@@ -4,6 +4,21 @@
     color: #203036;
 }
 
+.textbox {
+    margin-bottom: 150px;
+
+    h1 {
+        font-size: 50px;
+        padding-bottom: 20px;
+    }
+    p {
+        font-size: 27px;
+    }
+    h2 {
+        font-size: 40px;
+    }
+}
+
 .aboutus {
     display: flex;
     margin-top: 75px;
@@ -13,10 +28,13 @@
     width: 100%;
     height: 100%;
 
-    h1 {
-        font-size: 50px;
-    }
-    p {
-        font-size: 27px;
+    .aboutus-picture {
+        width: 100%;
+        img {
+            height: 550px;
+            width: 400px;
+            object-fit: contain;
+        }
     }
 }
+
