--- a/css-files/about.css
+++ b/css-files/about.css
@@ -4,8 +4,9 @@
     color: #203036;
 }
 
+/* The textbox is the same for each element */
 .textbox {
-    margin-bottom: 150px;
+    margin-bottom: 75px;
 
     h1 {
         font-size: 50px;
@@ -27,14 +28,75 @@
     gap: 2.5%;
     width: 100%;
     height: 100%;
+    margin-bottom: 0px;
 
     .aboutus-picture {
         width: 100%;
         img {
+            border-radius: 5px;
             height: 550px;
             width: 400px;
             object-fit: contain;
         }
     }
+}
+
+.mission {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    gap: 2.5%;
+    width: 100%;
+    height: 100%;
+    
+    .mission-picture {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        img {
+            border-radius: 5px;
+            height: 700px;
+            width: 500px;
+            object-fit: cover;
+        }
+    }
+}
+
+.background {
+    width: 100%;
+    height: 100%;
+
+    p {
+        margin-bottom: 0px;
+    }
+    
+    .background-picture {
+        display: flex;
+        gap: 5%;
+        align-items: center;
+        justify-content: flex-start;
+        width: 100%;
+        margin-top: 0px;
+        img {
+            border-radius: 5px;
+            object-fit: cover;
+        }
+        #image1 {
+            height: 450px;
+            width: 900px;
+        }
+        #image2 {
+            width: 300px;
+            height: 450px;
+        }
+    }
+}
+
+#background-textbox {
+    margin-right: 15%;
+}
+
+#becomemember {
+    margin-top: 100px;
 }
 
