--- a/css-files/about.css
+++ b/css-files/about.css
@@ -1,25 +1,29 @@
 .content {
-    margin-left: 10%;
-    margin-right: 10%;
-    color: #203036;
+    overflow-x: hidden;
 }
-
 
 .toppicture {
     top: 0px;
     position: relative;
 
     h1 {
+        line-height: 65px;
         text-align: center;
         margin-left: 10%;
         margin-right: 10%;
         position: absolute;
         background-color: #203036;
         top: 55%;
-        padding: 10px;
+        font-size: 80px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        padding-left: 50px;
+        padding-right: 50px;
         border-radius: 5px;
         color: white;
         span {
+            font-weight: normal;
+            font-size: 50px;
             opacity: 75%;
         }
     }
@@ -33,8 +37,10 @@
 
 /* The textbox is the same for each element */
 .textbox {
+    margin-left: 10%;
+    margin-right: 10%;
+    color: #203036;
     margin-bottom: 75px;
-
     h1 {
         font-size: 50px;
         padding-bottom: 20px;
@@ -45,6 +51,15 @@
     h2 {
         font-size: 40px;
     }
+    h4 {
+        font-size: 30px;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
+        margin-top: 100px;
+        display: flex;
+        justify-content: center;
+    }
+
 }
 
 .aboutus {
@@ -70,12 +85,60 @@
 
 .mission {
     display: flex;
+    flex-direction: column;
     flex-wrap: nowrap;
-    flex-direction: row;
     gap: 2.5%;
-    width: 100%;
     height: 100%;
-    
+    width: 100%;
+
+    .mission-buildhousehere {
+        margin-left: 10%;
+        margin-right: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .mission-picture {
+        overflow-x: scroll;
+        overflow-y: hidden;
+        padding-left: 5%;
+        padding-right: 5%;
+        width: 100%;
+        height: 100%;
+        margin-top: 0px;
+        padding-top: 0px;
+        background-color: #556165;
+
+        .pictures {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            gap: 1.8%;
+            width: 100%;
+            height: 460px;
+
+            img {
+                object-fit: cover;
+                width: 500px;
+                height: 400px;
+                border-radius: 5px;
+                box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+                &:hover {
+                  transform: scale(1.1);
+                }
+            }
+            #firstpicture {
+            }
+            #lastpicture {
+                padding-right: 190px;
+            }
+        }
+    }
+
+
+    /*
     .mission-picture {
         display: flex;
         align-items: center;
@@ -83,10 +146,11 @@
         img {
             border-radius: 5px;
             height: 700px;
-            width: 500px;
+            width: 350px;
             object-fit: cover;
         }
     }
+    */
 }
 
 .background {
@@ -99,6 +163,8 @@
     
     .background-picture {
         display: flex;
+        margin-left: 10%;
+        margin-right: 10%;
         gap: 5%;
         align-items: center;
         justify-content: flex-start;
@@ -121,6 +187,8 @@
 
 #background-textbox {
     margin-right: 15%;
+    margin-top: 100px;
+    color: #203036;
 }
 
 #becomemember {
