--- a/css-files/about.css
+++ b/css-files/about.css
@@ -216,6 +216,8 @@
     background-image: url(/photos/squiggly-blue.png);
     padding: 25px;
     padding-left: 50px;
+    border-radius: 5px;
+    background-size: cover;
 
     span {
         font-size: 25px;
