--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -214,7 +214,7 @@
   margin-left: 30px;
 }
 
-.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two {
+.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two {
   margin-top: 20px;
   margin-left: 40px;
 }
