--- a/css-files/about.css
+++ b/css-files/about.css
@@ -2,6 +2,10 @@
     overflow-x: hidden;
 }
 
+section {
+    padding-top: 50px;
+}
+
 .toppicture {
     top: 0px;
     position: relative;
@@ -44,7 +48,7 @@
     margin-left: 10%;
     margin-right: 10%;
     color: #203036;
-    margin-bottom: 75px;
+    margin-bottom: 25px;
     h1 {
         font-size: 50px;
         padding-bottom: 20px;
