--- a/css-files/about.css
+++ b/css-files/about.css
@@ -6,6 +6,10 @@ section {
     padding-top: 50px;
 }
 
+#faq-sec {
+    margin-bottom: 150px;
+}
+
 .toppicture {
     top: 0px;
     position: relative;
