updated about us images

--- a/css-files/about.css
+++ b/css-files/about.css
@@ -169,6 +169,10 @@ section {
     */
 }
 
+#mission-textbox {
+    margin-right: 15%;
+}
+
 .background {
     background-color: #A4AAAC;
     width: 100%;
