--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -103,6 +103,8 @@ body {
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
   &:hover {
     background-color: green;
+    transition: 0.2s;
+    transform: scale(1.1);
   }
 }
 
@@ -134,6 +136,7 @@ body {
   &:hover {
     transform: scale(1.15);
     background-color: #203036;
+    transition: 0.25s;
   }
 }
 
@@ -191,6 +194,7 @@ body {
     }
     &:hover {
       transform: scale(1.6);
+      transition: 0.25s;
     }
   }
 }
@@ -275,7 +279,8 @@ body {
   border: solid 2px #203036;
   &:hover {
     box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.578);
-    border: solid 2px white;
+    transition: 0.2s;
+    transform: scale(1.2);
   }
 }
 
@@ -328,8 +333,9 @@ body {
   font-size: 22px;
   border: solid 2px #D9D9D9;
   &:hover {
-    box-shadow: 2px 2px 10px 2px rgba(255, 255, 255, 0.578);
     border: solid 2px #203036;
+    transition: 0.2s;
+    transform: scale(1.2);
   }
 }
 
@@ -443,10 +449,19 @@ body {
   border: white solid 1px;
 }
 
-.enter-email p {
-  font-size: 22px;
-  padding: 5px;
-  margin-left: 10px;
+input {
+  background-color: #4E5A5E;
+  border: none;
+  margin-left: 25px;
+  font-size: 19px;
+  color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 90%;
+}
+
+input:focus {
+  outline: none;
 }
 
 .submit-button {
@@ -458,6 +473,11 @@ body {
   background-color: #456470;
   border-radius: 9999px;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+  &:hover {
+    transition: 0.2s;
+    transform: scale(1.2);
+    background-color: green;
+  }
 }
 
 .submit-button p {
